# gpt-cli

./: Cargo.toml  README  README.md
src/: gpt.rs  main.rs  ui.rs
