[package]
name = "gpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
futures = "0.3.29"
json = "0.12.4"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
